force-app/main/default/objects/ETCObject__c/ETCObject__c.object-meta.xml
<CustomObject>
    <description>Email to Candidate details are stored in this object.</description>
    <label>Parser Logs</label>
    <nameField>
        <displayFormat>ETC-{000000}</displayFormat>
        <label>Parser Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parser Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>