force-app/main/default/objects/ETCObject__c/fields/Applicant_Values__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Values__c</fullName>
    <label>Applicant Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>