force-app/main/default/objects/ETCObject__c/fields/Contact_Values__c.field-meta.xml
<CustomField>
    <fullName>Contact_Values__c</fullName>
    <label>Contact Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>