force-app/main/default/objects/ETCObject__c/fields/Existing_Applicant_New_Stage__c.field-meta.xml
<CustomField>
    <fullName>Existing_Applicant_New_Stage__c</fullName>
    <label>Existing Applicant New Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>