force-app/main/default/objects/ETCObject__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>