force-app/main/default/objects/ETCObject__c/fields/Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>Job_Ids__c</fullName>
    <label>Job IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>