force-app/main/default/objects/ETCObject__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Document Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>