force-app/main/default/objects/ETCObject__c/fields/New_Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Applicant_Type__c</fullName>
    <label>New Applicant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>