force-app/main/default/objects/ETCObject__c/fields/Overwrite_Candidate_Information__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Candidate_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Candidate Details</label>
    <type>Checkbox</type>
</CustomField>