force-app/main/default/objects/ETCObject__c/fields/sessionId__c.field-meta.xml
<CustomField>
    <fullName>sessionId__c</fullName>
    <formula>$Api.Session_ID</formula>
    <label>sessionId</label>
    <type>Text</type>
</CustomField>