force-app/main/default/objects/ETCObject__c/fields/sfURL__c.field-meta.xml
<CustomField>
    <fullName>sfURL__c</fullName>
    <formula>$Api.Partner_Server_URL_160</formula>
    <label>sfURL</label>
    <type>Text</type>
</CustomField>