force-app/main/default/objects/ETCObject__c/fields/Update_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Update_Candidate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check For Duplicates</label>
    <type>Checkbox</type>
</CustomField>