force-app/main/default/objects/ETCObject__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Candidate__c</columns>
    <columns>Source__c</columns>
    <columns>Result__c</columns>
    <columns>Name__c</columns>
    <columns>Job_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All2</label>
    <language>en_US</language>
</ListView>