force-app/main/default/objects/ETCObject__c/listViews/Today_s.listView-meta.xml
<ListView>
    <fullName>Today_s</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>Candidate__c</columns>
    <columns>Name__c</columns>
    <columns>Result__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s</label>
    <language>en_US</language>
</ListView>